--- a/classifier/explainable/xgboost_test.ipynb
+++ b/classifier/explainable/xgboost_test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,6 +19,13 @@
     "import numpy as np\n",
     "import sklearn as skl \n",
     "import xgboost as xgb\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training"
    ]
   },
   {
@@ -559,12 +566,281 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from joblib import dump, load"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Gridesearch = load('xgbCVGridSearch.joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameters: {'colsample_bytree': 0.5, 'learning_rate': 0.1, 'max_depth': 10, 'n_estimators': 1000, 'num_class': 3, 'objective': 'multi:softprob'}\n",
+      "Highest AUC:  0.9309728292375551\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Best parameters:\", Gridesearch.best_params_)\n",
+    "print(\"Highest AUC: \", (Gridesearch.best_score_))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = pd.DataFrame(Gridesearch.cv_results_)\n",
+    "# df1.to_csv('xgboost_results.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mean_fit_time</th>\n",
+       "      <th>std_fit_time</th>\n",
+       "      <th>mean_score_time</th>\n",
+       "      <th>std_score_time</th>\n",
+       "      <th>param_colsample_bytree</th>\n",
+       "      <th>param_learning_rate</th>\n",
+       "      <th>param_max_depth</th>\n",
+       "      <th>param_n_estimators</th>\n",
+       "      <th>param_num_class</th>\n",
+       "      <th>param_objective</th>\n",
+       "      <th>params</th>\n",
+       "      <th>split0_test_score</th>\n",
+       "      <th>split1_test_score</th>\n",
+       "      <th>split2_test_score</th>\n",
+       "      <th>split3_test_score</th>\n",
+       "      <th>split4_test_score</th>\n",
+       "      <th>mean_test_score</th>\n",
+       "      <th>std_test_score</th>\n",
+       "      <th>rank_test_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>44</th>\n",
+       "      <td>80.091854</td>\n",
+       "      <td>8.578351</td>\n",
+       "      <td>0.422838</td>\n",
+       "      <td>0.032511</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>multi:softprob</td>\n",
+       "      <td>{'colsample_bytree': 0.5, 'learning_rate': 0.1...</td>\n",
+       "      <td>0.928852</td>\n",
+       "      <td>0.929915</td>\n",
+       "      <td>0.932881</td>\n",
+       "      <td>0.929763</td>\n",
+       "      <td>0.933452</td>\n",
+       "      <td>0.930973</td>\n",
+       "      <td>0.001837</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>61.540091</td>\n",
+       "      <td>6.199461</td>\n",
+       "      <td>0.324311</td>\n",
+       "      <td>0.029329</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>multi:softprob</td>\n",
+       "      <td>{'colsample_bytree': 0.5, 'learning_rate': 0.1...</td>\n",
+       "      <td>0.927215</td>\n",
+       "      <td>0.928086</td>\n",
+       "      <td>0.931972</td>\n",
+       "      <td>0.927805</td>\n",
+       "      <td>0.931833</td>\n",
+       "      <td>0.929382</td>\n",
+       "      <td>0.002077</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>84.471425</td>\n",
+       "      <td>9.330232</td>\n",
+       "      <td>0.453256</td>\n",
+       "      <td>0.045889</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>multi:softprob</td>\n",
+       "      <td>{'colsample_bytree': 0.5, 'learning_rate': 0.0...</td>\n",
+       "      <td>0.925553</td>\n",
+       "      <td>0.927085</td>\n",
+       "      <td>0.930634</td>\n",
+       "      <td>0.926786</td>\n",
+       "      <td>0.930606</td>\n",
+       "      <td>0.928133</td>\n",
+       "      <td>0.002095</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>92.961855</td>\n",
+       "      <td>7.584533</td>\n",
+       "      <td>0.471483</td>\n",
+       "      <td>0.070459</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>multi:softprob</td>\n",
+       "      <td>{'colsample_bytree': 0.7, 'learning_rate': 0.1...</td>\n",
+       "      <td>0.926387</td>\n",
+       "      <td>0.926844</td>\n",
+       "      <td>0.930113</td>\n",
+       "      <td>0.926399</td>\n",
+       "      <td>0.930192</td>\n",
+       "      <td>0.927987</td>\n",
+       "      <td>0.001776</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>45.372425</td>\n",
+       "      <td>1.339221</td>\n",
+       "      <td>0.232754</td>\n",
+       "      <td>0.016557</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>500</td>\n",
+       "      <td>3</td>\n",
+       "      <td>multi:softprob</td>\n",
+       "      <td>{'colsample_bytree': 0.5, 'learning_rate': 0.1...</td>\n",
+       "      <td>0.925062</td>\n",
+       "      <td>0.926473</td>\n",
+       "      <td>0.929667</td>\n",
+       "      <td>0.926238</td>\n",
+       "      <td>0.930366</td>\n",
+       "      <td>0.927561</td>\n",
+       "      <td>0.002073</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    mean_fit_time  std_fit_time  mean_score_time  std_score_time  \\\n",
+       "44      80.091854      8.578351         0.422838        0.032511   \n",
+       "41      61.540091      6.199461         0.324311        0.029329   \n",
+       "29      84.471425      9.330232         0.453256        0.045889   \n",
+       "89      92.961855      7.584533         0.471483        0.070459   \n",
+       "43      45.372425      1.339221         0.232754        0.016557   \n",
+       "\n",
+       "   param_colsample_bytree param_learning_rate param_max_depth  \\\n",
+       "44                    0.5                 0.1              10   \n",
+       "41                    0.5                 0.1               8   \n",
+       "29                    0.5                0.05              10   \n",
+       "89                    0.7                 0.1              10   \n",
+       "43                    0.5                 0.1              10   \n",
+       "\n",
+       "   param_n_estimators param_num_class param_objective  \\\n",
+       "44               1000               3  multi:softprob   \n",
+       "41               1000               3  multi:softprob   \n",
+       "29               1000               3  multi:softprob   \n",
+       "89               1000               3  multi:softprob   \n",
+       "43                500               3  multi:softprob   \n",
+       "\n",
+       "                                               params  split0_test_score  \\\n",
+       "44  {'colsample_bytree': 0.5, 'learning_rate': 0.1...           0.928852   \n",
+       "41  {'colsample_bytree': 0.5, 'learning_rate': 0.1...           0.927215   \n",
+       "29  {'colsample_bytree': 0.5, 'learning_rate': 0.0...           0.925553   \n",
+       "89  {'colsample_bytree': 0.7, 'learning_rate': 0.1...           0.926387   \n",
+       "43  {'colsample_bytree': 0.5, 'learning_rate': 0.1...           0.925062   \n",
+       "\n",
+       "    split1_test_score  split2_test_score  split3_test_score  \\\n",
+       "44           0.929915           0.932881           0.929763   \n",
+       "41           0.928086           0.931972           0.927805   \n",
+       "29           0.927085           0.930634           0.926786   \n",
+       "89           0.926844           0.930113           0.926399   \n",
+       "43           0.926473           0.929667           0.926238   \n",
+       "\n",
+       "    split4_test_score  mean_test_score  std_test_score  rank_test_score  \n",
+       "44           0.933452         0.930973        0.001837                1  \n",
+       "41           0.931833         0.929382        0.002077                2  \n",
+       "29           0.930606         0.928133        0.002095                3  \n",
+       "89           0.930192         0.927987        0.001776                4  \n",
+       "43           0.930366         0.927561        0.002073                5  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.sort_values(['rank_test_score']).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.to_csv('xgboost_results.csv')"
    ]
   }
  ],
