--- a/classifier/nn/test.ipynb
+++ b/classifier/nn/test.ipynb
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
        "1408474"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "array([0., 1., 0.], dtype=float32)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -519,35 +519,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"model_4\"\n",
+      "Model: \"model\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
       " word_IDs (InputLayer)       [(None, 15)]              0         \n",
       "                                                                 \n",
-      " embedding_4 (Embedding)     (None, 15, 64)            1836928   \n",
+      " embedding (Embedding)       (None, 15, 64)            1836928   \n",
+      "                                                                 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-08-13 14:42:53.733101: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " conv1d (Conv1D)             (None, 15, 64)            12352     \n",
       "                                                                 \n",
-      " conv1d_4 (Conv1D)           (None, 15, 64)            12352     \n",
+      " activation (Activation)     (None, 15, 64)            0         \n",
       "                                                                 \n",
-      " activation_4 (Activation)   (None, 15, 64)            0         \n",
+      " global_max_pooling1d (Globa  (None, 64)               0         \n",
+      " lMaxPooling1D)                                                  \n",
       "                                                                 \n",
-      " global_max_pooling1d_4 (Glo  (None, 64)               0         \n",
-      " balMaxPooling1D)                                                \n",
+      " dropout (Dropout)           (None, 64)                0         \n",
       "                                                                 \n",
-      " dropout_8 (Dropout)         (None, 64)                0         \n",
+      " dense (Dense)               (None, 32)                2080      \n",
       "                                                                 \n",
-      " dense_8 (Dense)             (None, 32)                2080      \n",
+      " dropout_1 (Dropout)         (None, 32)                0         \n",
       "                                                                 \n",
-      " dropout_9 (Dropout)         (None, 32)                0         \n",
-      "                                                                 \n",
-      " dense_9 (Dense)             (None, 3)                 99        \n",
+      " dense_1 (Dense)             (None, 3)                 99        \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 1,851,459\n",
@@ -604,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -612,17 +626,17 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "1079/1079 [==============================] - 14s 12ms/step - loss: 0.4804 - accuracy: 0.8041 - auc: 0.9381 - val_loss: 0.3769 - val_accuracy: 0.8504 - val_auc: 0.9612\n",
+      "1079/1079 [==============================] - 36s 32ms/step - loss: 0.4845 - accuracy: 0.8032 - auc: 0.9371 - val_loss: 0.3775 - val_accuracy: 0.8515 - val_auc: 0.9611\n",
       "Epoch 2/5\n",
-      "1079/1079 [==============================] - 13s 12ms/step - loss: 0.2981 - accuracy: 0.8877 - auc: 0.9752 - val_loss: 0.3921 - val_accuracy: 0.8449 - val_auc: 0.9592\n",
+      "1079/1079 [==============================] - 24s 22ms/step - loss: 0.2961 - accuracy: 0.8879 - auc: 0.9755 - val_loss: 0.3786 - val_accuracy: 0.8572 - val_auc: 0.9617\n",
       "Epoch 3/5\n",
-      "1079/1079 [==============================] - 13s 12ms/step - loss: 0.2238 - accuracy: 0.9176 - auc: 0.9855 - val_loss: 0.4104 - val_accuracy: 0.8468 - val_auc: 0.9582\n",
+      "1079/1079 [==============================] - 30s 28ms/step - loss: 0.2225 - accuracy: 0.9170 - auc: 0.9858 - val_loss: 0.4296 - val_accuracy: 0.8494 - val_auc: 0.9571\n",
       "Epoch 4/5\n",
-      "1079/1079 [==============================] - 14s 13ms/step - loss: 0.1736 - accuracy: 0.9365 - auc: 0.9911 - val_loss: 0.4654 - val_accuracy: 0.8419 - val_auc: 0.9528\n",
+      "1079/1079 [==============================] - 27s 25ms/step - loss: 0.1722 - accuracy: 0.9369 - auc: 0.9911 - val_loss: 0.4740 - val_accuracy: 0.8411 - val_auc: 0.9531\n",
       "Epoch 5/5\n",
-      "1079/1079 [==============================] - 13s 12ms/step - loss: 0.1382 - accuracy: 0.9495 - auc: 0.9941 - val_loss: 0.5432 - val_accuracy: 0.8368 - val_auc: 0.9479\n",
+      "1079/1079 [==============================] - 28s 26ms/step - loss: 0.1361 - accuracy: 0.9490 - auc: 0.9943 - val_loss: 0.5373 - val_accuracy: 0.8407 - val_auc: 0.9477\n",
       "\n",
-      "Testing Accuracy:  0.8835\n"
+      "Testing Accuracy:  0.8928\n"
      ]
     }
    ],
@@ -647,93 +661,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44015/44015 [==============================] - 173s 4ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = model.predict(test_instances_int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9706610441207886"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "auc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "loss, accuracy, auc = model.evaluate(test_instances_int, test_labels_1hot,\n",
-    "                                batch_size=batch_size,\n",
-    "                                verbose=False)\n"
+    "results.tofile('../../../Files/models/cnn_results.txt', sep=' ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9577053189277649"
+       "(1408474, 3)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "auc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9995846152305603"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "auc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9685941338539124"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "auc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(69000, 28)"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_instances_int.shape"
+    "results.shape"
    ]
   },
   {
