--- a/classifier/nn/test.ipynb
+++ b/classifier/nn/test.ipynb
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
        "array([0., 1., 0.], dtype=float32)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -533,21 +533,7 @@
       " word_IDs (InputLayer)       [(None, 15)]              0         \n",
       "                                                                 \n",
       " embedding (Embedding)       (None, 15, 64)            1836928   \n",
-      "                                                                 \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-08-13 14:42:53.733101: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "                                                                 \n",
       " conv1d (Conv1D)             (None, 15, 64)            12352     \n",
       "                                                                 \n",
       " activation (Activation)     (None, 15, 64)            0         \n",
@@ -568,6 +554,14 @@
       "Trainable params: 1,851,459\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-08-15 11:42:16.761199: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
    ],
@@ -618,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -626,17 +620,17 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "1079/1079 [==============================] - 36s 32ms/step - loss: 0.4845 - accuracy: 0.8032 - auc: 0.9371 - val_loss: 0.3775 - val_accuracy: 0.8515 - val_auc: 0.9611\n",
+      "1079/1079 [==============================] - 24s 22ms/step - loss: 0.0379 - accuracy: 0.9839 - auc: 0.9995 - val_loss: 1.3737 - val_accuracy: 0.8266 - val_auc: 0.9164\n",
       "Epoch 2/5\n",
-      "1079/1079 [==============================] - 24s 22ms/step - loss: 0.2961 - accuracy: 0.8879 - auc: 0.9755 - val_loss: 0.3786 - val_accuracy: 0.8572 - val_auc: 0.9617\n",
+      "1079/1079 [==============================] - 11s 11ms/step - loss: 0.0373 - accuracy: 0.9841 - auc: 0.9995 - val_loss: 1.4615 - val_accuracy: 0.8272 - val_auc: 0.9136\n",
       "Epoch 3/5\n",
-      "1079/1079 [==============================] - 30s 28ms/step - loss: 0.2225 - accuracy: 0.9170 - auc: 0.9858 - val_loss: 0.4296 - val_accuracy: 0.8494 - val_auc: 0.9571\n",
+      "1079/1079 [==============================] - 12s 11ms/step - loss: 0.0381 - accuracy: 0.9837 - auc: 0.9994 - val_loss: 1.4907 - val_accuracy: 0.8253 - val_auc: 0.9125\n",
       "Epoch 4/5\n",
-      "1079/1079 [==============================] - 27s 25ms/step - loss: 0.1722 - accuracy: 0.9369 - auc: 0.9911 - val_loss: 0.4740 - val_accuracy: 0.8411 - val_auc: 0.9531\n",
+      "1079/1079 [==============================] - 13s 12ms/step - loss: 0.0388 - accuracy: 0.9840 - auc: 0.9994 - val_loss: 1.3925 - val_accuracy: 0.8271 - val_auc: 0.9154\n",
       "Epoch 5/5\n",
-      "1079/1079 [==============================] - 28s 26ms/step - loss: 0.1361 - accuracy: 0.9490 - auc: 0.9943 - val_loss: 0.5373 - val_accuracy: 0.8407 - val_auc: 0.9477\n",
+      "1079/1079 [==============================] - 13s 12ms/step - loss: 0.0370 - accuracy: 0.9844 - auc: 0.9995 - val_loss: 1.3994 - val_accuracy: 0.8253 - val_auc: 0.9155\n",
       "\n",
-      "Testing Accuracy:  0.8928\n"
+      "Testing Accuracy:  0.8731\n"
      ]
     }
    ],
@@ -656,19 +650,19 @@
     "                                batch_size=batch_size,\n",
     "                                verbose=False)\n",
     "\n",
-    "print(\"\\nTesting Accuracy:  {:.4f}\".format(accuracy))"
+    "print(\"\\nTesting Accuracy:  {:.4f}\".format(auc))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "44015/44015 [==============================] - 173s 4ms/step\n"
+      "44015/44015 [==============================] - 43s 983us/step\n"
      ]
     }
    ],
@@ -678,16 +672,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9706610441207886"
+       "0.9474369287490845"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,11 +692,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results.tofile('../../../Files/models/cnn_results.txt', sep=' ')"
+    "results.tofile('../../../Files/models/cnn_results2.txt', sep=' ')"
    ]
   },
   {
@@ -764,20 +758,6 @@
    "source": [
     "test_instances_int.shape"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## LSTM"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
