--- a/analysis/initial_analysis.ipynb
+++ b/analysis/initial_analysis.ipynb
@@ -14,6 +14,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Vaccinations"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -333,11 +340,112 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training / Test Set statistics"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_data = pd.read_pickle('../../Files/Submissions/train/train_split_submission.pickle') \n",
+    "valid_data = pd.read_pickle('../../Files/Submissions/train/val_split_submission.pickle')\n",
+    "test_data = pd.read_pickle('../../Files/Submissions/train/test_split_submission.pickle')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(69000, 11) (15200, 11) (1408474, 11)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_data.shape, valid_data.shape, test_data.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "38.62471014492753"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "length = 0 \n",
+    "for i, j in train_data.iterrows():\n",
+    "    length += len(j['cleanTitle'])\n",
+    "\n",
+    "\n",
+    "length / train_data.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "38.540789473684214"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "length = 0 \n",
+    "for i, j in valid_data.iterrows():\n",
+    "    length += len(j['cleanTitle'])\n",
+    "\n",
+    "length / valid_data.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28.687450389570557"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "length = 0 \n",
+    "for i, j in test_data.iterrows():\n",
+    "    length += len(j['cleanTitle'])\n",
+    "\n",
+    "length / test_data.shape[0]"
+   ]
   }
  ],
  "metadata": {
