--- a/classifier/utils/dataset_prep.ipynb
+++ b/classifier/utils/dataset_prep.ipynb
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,8 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package omw-1.4 to\n",
-      "[nltk_data]     /Users/jakobschlierf/nltk_data...\n"
+      "[nltk_data]     /Users/jakobschlierf/nltk_data...\n",
+      "[nltk_data]   Package omw-1.4 is already up-to-date!\n"
      ]
     },
     {
@@ -657,7 +658,7 @@
        "True"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,6 +698,13 @@
     "    return \" \".join(filtered_words)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocessing for Training Data"
    ]
   },
   {
@@ -900,20 +908,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -942,6 +936,64 @@
    ],
    "source": [
     "train['subreddit'].value_counts().plot(kind='bar')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preprocessing Posts for Scoring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = os.listdir('../../../Files/Submissions/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = ['pics.pickle']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for file in files:\n",
+    "    if file[-7:] != \".pickle\":\n",
+    "        files.pop(files.index(file))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1/1 [12:57<00:00, 777.01s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tqdm import tqdm\n",
+    "\n",
+    "for file in tqdm(files):\n",
+    "    df = pd.read_pickle(os.path.join('../../../Files/Submissions/',file))\n",
+    "    df['cleanTitle']=df['title'].map(lambda s:preprocess(s)) \n",
+    "    df.to_pickle(os.path.join('../../../Files/Submissions/',file))"
    ]
   }
  ],
