--- a/classifier/utils/dataset_prep.ipynb
+++ b/classifier/utils/dataset_prep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,6 +994,136 @@
     "    df = pd.read_pickle(os.path.join('../../../Files/Submissions/',file))\n",
     "    df['cleanTitle']=df['title'].map(lambda s:preprocess(s)) \n",
     "    df.to_pickle(os.path.join('../../../Files/Submissions/',file))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "files = os.listdir('../../../Files/Submissions/')\n",
+    "\n",
+    "# remove any files that are not in the .pickle type \n",
+    "files = [f for f in files if f.endswith('.pickle')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "611"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "from itertools import chain\n",
+    "with open('../../Preprocessing/subreddits_sm.csv', newline='') as f:\n",
+    "    reader = csv.reader(f)\n",
+    "    subreddits = list(reader)\n",
+    "\n",
+    "subreddits = list(chain.from_iterable(subreddits))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Qult_Headquarters'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "files[0][:-7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for file in files:\n",
+    "    if file[:-7] not in subreddits:\n",
+    "        files.pop(files.index(file))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "298"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(subreddits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for file in files:\n",
+    "    #move file to the score directory\n",
+    "    os.rename(os.path.join('../../../Files/Submissions/',file), os.path.join('../../../Files/Submissions/score/',file))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "'AIandRobotics.pickle' is not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/jakobschlierf/Desktop/Master/Thesis/Github/classifier/utils/dataset_prep.ipynb Cell 46\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/jakobschlierf/Desktop/Master/Thesis/Github/classifier/utils/dataset_prep.ipynb#Y100sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m files\u001b[39m.\u001b[39;49mindex(\u001b[39m'\u001b[39;49m\u001b[39mAIandRobotics.pickle\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "\u001b[0;31mValueError\u001b[0m: 'AIandRobotics.pickle' is not in list"
+     ]
+    }
+   ],
+   "source": [
+    "files.index('AIandRobotics.pickle')"
    ]
   }
  ],
