--- a/classifier/evaluate_performance.ipynb
+++ b/classifier/evaluate_performance.ipynb
@@ -914,7 +914,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('reddit_env_test')",
+   "display_name": "Python 3.7.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -928,12 +928,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6c5bfe69c2b2d435baea75ee1a7865fc7666bb526179204de658e4f2811cb086"
+    "hash": "e774977668b7c0ae8309835a5187aa7fbf7669e7d0bb59755bc63e573643edcd"
    }
   }
  },
